# adventofcode

./: .gitignore
2021/: Cargo.toml
2021/src/: lib.rs
2022/: 2022hs.cabal  CHANGELOG.md  package.json
2022/app/: Main01.hs  Main02.hs  Main03.hs  Main04.hs  Main05.hs  Main06.hs  Main07.hs  Main08.hs  Main09.hs  Main10.hs  Main11.hs  Main12.hs  Main13.hs  Main14.hs  Main15.hs  Main16.hs  Main17.hs  Main18.hs  Main19.hs  Main20.hs  Main21.hs  Main22.hs  Main23.hs
2022/src/: main07.ts  main08.ts  main12.ts  main13.ts  main14.ts
2023/: go.mod
2023/cmd/day01/: main.go
2023/cmd/day02/: main.go
2023/kotlin/src/main/kotlin/: Day01.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day15.kt  Day16.kt  Day17.kt  Day18.kt  Day19.kt  Day20.kt  Day22.kt  main.kt
2023/kotlin/src/main/kotlin/util/: dir.kt  math.kt
2024/: 2024.sln
2024/Day01/: Day01.csproj  Program.cs
2024/Day02/: Program.cs
2024/Day03/: Program.cs
2024/Day04/: Program.cs
2024/Day05/: Program.cs
2024/Day06/: Program.cs
2024/Day07/: Program.cs
2024/Day08/: Program.cs
2024/Day09/: Program.cs
2024/Day10/: Program.cs
2024/Day11/: Program.cs
2024/Day12/: Program.cs
2024/Day19/: Program.cs
2025/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp
